# implicit-trait

./: Cargo.toml  Justfile  README.md
src/: lib.rs
tests/: basic.rs  main.rs
tests/fail/: private_in_pub_trait.rs  private_in_pub_trait.stderr
tests/pass/: basic.rs
