[package]
name = "implicit-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.23"
syn = {version  = "1.0.107", features = ["full"]}


[dev-dependencies]
trybuild = "1.0.77"